# food-waste-platform

./: .gitignore  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7667eb78e4ec_create_initial_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  auth.py  deliveries.py  donations.py  notifications.py  organizations.py
backend/app/core/: config.py  database.py  enums.py  security.py
backend/app/models/: __init__.py  delivery.py  donation.py  notification.py  organization.py  user.py
backend/app/schemas/: analytics.py  auth.py  delivery.py  donation.py  notification.py  organization.py
backend/app/services/: analytics_service.py  delivery_service.py  donation_service.py  notification_service.py
backend/app/tests/: conftest.py  test.db  test_auth.py  test_donations.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analytics.ts  client.ts
frontend/src/components/analytics/: MetricGrid.tsx
frontend/src/lib/: constants.ts  storage.ts  utils.ts
frontend/src/types/: index.ts
